--- a/templates/second_page.html
+++ b/templates/second_page.html
@@ -162,26 +162,6 @@
             width: 70%;
         }
 
-        /* GitHub Button Styles */
-        .github-button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-            background-color: #24292e;
-            transition: background-color 0.3s, transform 0.3s;
-        }
-        
-        .github-button:hover {
-            background-color: #000;
-            transform: scale(1.05);
-        }
-        
-        .github-logo {
-            display: flex;
-            align-items: center;
-        }
-
         /* Keyframe Animations */
         @keyframes fadeInUp {
             0% {
@@ -243,56 +223,44 @@
                     {% for poll in public_polls %}
                         <li>
                             <a href="{{ url_for('fourth_page', poll_id=poll['_id']) }}">{{ poll['question'] }}</a>
-                            <span class="timer" id="timer_{{ poll["_id"] }}"></span>
+                            <span class="timer" id="timer_{{ poll['_id'] }}"></span>
                         </li>
                     {% endfor %}
                 </ul>
             </div>
         </div>
+
         <div class="sidebar">
             <a href="{{ url_for('profile_page') }}" class="profile-button">Profile</a>
             <a href="{{ url_for('guide_and_help') }}" class="profile-button">Guide and Help</a>
             <a href="{{ url_for('third_page') }}" class="button">Make Poll</a>
             <a href="{{ url_for('sixth_page') }}" class="button">Join Poll</a>
             <a href="{{ url_for('manage_polls') }}" class="button">Manage Polls</a>
-            
-            <!-- GitHub link with logo -->
-            <a href="https://github.com/kushagra751" class="button github-button" target="_blank">
-                <span class="github-logo">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white">
-                        <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
-                    </svg>
-                </span>
-                GitHub
-            </a>
         </div>
     </div>
 
     <script>
         {% for poll in public_polls %}
-            var endTime_{{ poll['_id'] }} = new Date().getTime() + ({{ poll['time_left'] }} * 1000);
-            
-            function updateTimer_{{ poll['_id'] }}() {
-                var now = new Date().getTime();
-                var timeLeft = endTime_{{ poll['_id'] }} - now;
-                
-                var days = Math.floor(timeLeft / (1000 * 60 * 60 * 24));
-                var hours = Math.floor((timeLeft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                var minutes = Math.floor((timeLeft % (1000 * 60 * 60)) / (1000 * 60));
-                var seconds = Math.floor((timeLeft % (1000 * 60)) / 1000);
-                
-                var timerElement = document.getElementById('timer_{{ poll["_id"] }}');
-                if (timerElement) {
-                    if (timeLeft > 0) {
-                        timerElement.innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s";
-                    } else {
-                        timerElement.innerHTML = "Expired";
-                    }
+            var endTime = new Date("{{ poll.end_time.isoformat() }}").getTime();
+            var timerElement = document.getElementById('timer_{{ poll['_id'] }}');
+
+            function updateTimer() {
+                var currentTime = new Date().getTime();
+                var timeLeft = endTime - currentTime;
+
+                if (timeLeft <= 0) {
+                    timerElement.innerHTML = "Poll has ended";
+                } else {
+                    var days = Math.floor(timeLeft / (1000 * 60 * 60 * 24));
+                    var hours = Math.floor((timeLeft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                    var minutes = Math.floor((timeLeft % (1000 * 60 * 60)) / (1000 * 60));
+                    var seconds = Math.floor((timeLeft % (1000 * 60)) / 1000);
+
+                    timerElement.innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s";
                 }
             }
-            
-            updateTimer_{{ poll['_id'] }}();
-            setInterval(updateTimer_{{ poll['_id'] }}, 1000);
+
+            setInterval(updateTimer, 1000);  // Update the timer every second
         {% endfor %}
     </script>
 </body>
